--- a/test_vit.ipynb
+++ b/test_vit.ipynb
@@ -9,16 +9,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-<<<<<<< HEAD
       "c:\\Users\\konka\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-=======
-      "c:\\Users\\Aniket Konkar\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
->>>>>>> eb3cfaf021a2a8f8385e9cdde7545bae970d9665
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
    "source": [
+    "# Required Libraries\n",
     "import torch\n",
     "from datasets import Dataset"
    ]
@@ -33,7 +30,6 @@
    ]
   },
   {
-<<<<<<< HEAD
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -41,8 +37,6 @@
    ]
   },
   {
-=======
->>>>>>> eb3cfaf021a2a8f8385e9cdde7545bae970d9665
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -51,11 +45,7 @@
     "# Use a pipeline as a high-level helper\n",
     "from transformers import pipeline\n",
     "\n",
-<<<<<<< HEAD
     "pipe = pipeline(\"image-classification\", model=\"vit-base-beans\", framework=\"pt\")"
-=======
-    "pipe = pipeline(\"image-classification\", model=\"vit-base-beans\", device=0, framework=\"pt\")"
->>>>>>> eb3cfaf021a2a8f8385e9cdde7545bae970d9665
    ]
   },
   {
@@ -64,16 +54,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-<<<<<<< HEAD
     "result = pipe(ds['image']) # Model is performing inference"
-=======
-    "result = pipe(ds['image'])"
->>>>>>> eb3cfaf021a2a8f8385e9cdde7545bae970d9665
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 10,
    "metadata": {},
    "outputs": [
@@ -5095,9 +5080,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-=======
-   "execution_count": 5,
->>>>>>> eb3cfaf021a2a8f8385e9cdde7545bae970d9665
    "metadata": {},
    "outputs": [
     {
@@ -5109,11 +5091,7 @@
        "})"
       ]
      },
-<<<<<<< HEAD
      "execution_count": 11,
-=======
-     "execution_count": 5,
->>>>>>> eb3cfaf021a2a8f8385e9cdde7545bae970d9665
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5124,11 +5102,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 12,
-=======
-   "execution_count": 6,
->>>>>>> eb3cfaf021a2a8f8385e9cdde7545bae970d9665
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5139,7 +5113,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 13,
    "metadata": {},
    "outputs": [
@@ -5168,36 +5141,16 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-=======
-   "execution_count": 7,
->>>>>>> eb3cfaf021a2a8f8385e9cdde7545bae970d9665
    "metadata": {},
    "outputs": [],
    "source": [
     "import csv\n",
     "\n",
-<<<<<<< HEAD
     "def update_csv(csv_file, image_whale_dict, updated_csv_file):\n",
-=======
-    "def generate_submission_csv(csv_file, image_whale_dict, updated_csv_file):\n",
-    "    \"\"\"\n",
-    "    Update a CSV file with image-to-whale mappings and write the updates to a new CSV file.\n",
-    "\n",
-    "    Args:\n",
-    "    - csv_file (str): Path to the CSV file.\n",
-    "    - image_whale_dict (dict): Dictionary containing image-to-whale mappings.\n",
-    "    - updated_csv_file (str): Path to the new CSV file to write the updates.\n",
-    "\n",
-    "    Returns:\n",
-    "    - None\n",
-    "    \"\"\"\n",
-    "    # Read the CSV file\n",
->>>>>>> eb3cfaf021a2a8f8385e9cdde7545bae970d9665
     "    with open(csv_file, 'r') as file:\n",
     "        reader = csv.reader(file)\n",
     "        rows = list(reader)\n",
     "\n",
-<<<<<<< HEAD
     "    # get the header row\n",
     "    header = rows[0]\n",
     "    \n",
@@ -5212,53 +5165,20 @@
     "            whale_id = image_whale_dict[image_name]\n",
     "\n",
     "            # update the corresponding whale ID column to 1 and others to 0\n",
-=======
-    "    # Get the header row\n",
-    "    header = rows[0]\n",
-    "    \n",
-    "    # Find the index of the columns with whale IDs\n",
-    "    whale_id_indices = {header[i]: i for i in range(1, len(header))}\n",
-    "\n",
-    "    # For each row in the CSV file\n",
-    "    for row in rows[1:]:\n",
-    "        image_name = row[0]\n",
-    "        if image_name in image_whale_dict:\n",
-    "            # Get the whale ID from the dictionary\n",
-    "            whale_id = image_whale_dict[image_name]\n",
-    "\n",
-    "            # Update the corresponding whale ID column to 1 and others to 0\n",
->>>>>>> eb3cfaf021a2a8f8385e9cdde7545bae970d9665
     "            for col_name, col_index in whale_id_indices.items():\n",
     "                if col_name == f'whale_{whale_id}':\n",
     "                    row[col_index] = '1'\n",
     "                else:\n",
     "                    row[col_index] = '0'\n",
     "\n",
-<<<<<<< HEAD
     "    # write back\n",
-=======
-    "    # Write the modified data to the new CSV file\n",
->>>>>>> eb3cfaf021a2a8f8385e9cdde7545bae970d9665
     "    with open(updated_csv_file, 'w', newline='') as file:\n",
     "        writer = csv.writer(file)\n",
     "        writer.writerows(rows)\n",
     "\n",
-<<<<<<< HEAD
     "csv_file = 'dataset/sample_submission.csv'\n",
     "output_csv_file = 'submissions/test_vision_transformer.csv'\n",
     "update_csv(csv_file, result_dict, output_csv_file)"
-=======
-    "\n",
-    "# CSV file path\n",
-    "csv_file = 'dataset/sample_submission.csv'\n",
-    "output_csv_file = 'submissions/test_vision_transformer.csv'\n",
-    "\n",
-    "# Dictionary mapping image file names to whale IDs\n",
-    "image_whale_dict = result_dict\n",
-    "\n",
-    "# Call the function to update the CSV file\n",
-    "generate_submission_csv(csv_file, image_whale_dict, output_csv_file)"
->>>>>>> eb3cfaf021a2a8f8385e9cdde7545bae970d9665
    ]
   }
  ],
@@ -5278,11 +5198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-<<<<<<< HEAD
    "version": "3.12.2"
-=======
-   "version": "3.12.1"
->>>>>>> eb3cfaf021a2a8f8385e9cdde7545bae970d9665
   }
  },
  "nbformat": 4,
