added comments for scripts

--- a/scripts/resize_img_to_256x256px.ipynb
+++ b/scripts/resize_img_to_256x256px.ipynb
@@ -13,27 +13,17 @@
     "import pandas as pd\n",
     "\n",
     "def resize_images_in_folder(input_folder, output_folder, csv_file):\n",
-    "    # Create the output folder if it doesn't exist\n",
     "    if not os.path.exists(output_folder):\n",
     "        os.makedirs(output_folder)\n",
     "        \n",
-    "    # Get a list of all files in the input folder\n",
     "    files = os.listdir(input_folder) \n",
-    "    \n",
-    "    # Store image information\n",
     "    image_data = []\n",
-    "    \n",
-    "    # Iterate over each file\n",
+    "\n",
     "    for file_name in files:\n",
-    "        # Construct the full path to the file\n",
+    "    \n",
     "        input_file_path = os.path.join(input_folder, file_name)\n",
-    "        \n",
-    "        # Check if the file is an image\n",
     "        if input_file_path.endswith(('.jpg', '.jpeg', '.png', '.bmp', '.tif', '.tiff')):\n",
-    "            # Read the image\n",
     "            img = cv2.imread(input_file_path)\n",
-    "            \n",
-    "            # Check if the image is loaded properly\n",
     "            if img is None:\n",
     "                print(f\"Error: Image {file_name} not loaded!\")\n",
     "                continue\n",
@@ -48,13 +38,10 @@
     "            width_scaling_ratio = 256 / original_width\n",
     "            height_scaling_ratio = 256 / original_height\n",
     "            \n",
-    "            # Construct the output file path\n",
     "            output_file_path = os.path.join(output_folder, file_name)\n",
     "            \n",
     "            # Save the resized image\n",
     "            cv2.imwrite(output_file_path, resized_img)\n",
-    "            \n",
-    "            # Store image information\n",
     "            image_info = {\n",
     "                'file_name': file_name,\n",
     "                'x_scale_ratio': width_scaling_ratio,\n",
@@ -62,10 +49,8 @@
     "            }\n",
     "            image_data.append(image_info)\n",
     "    \n",
-    "    # Write image information to CSV file\n",
     "    df = pd.DataFrame(image_data)\n",
-    "    df.to_csv(csv_file, index=False)\n",
-    "\n"
+    "    df.to_csv(csv_file, index=False)"
    ]
   },
   {
